--- a/M1 C1.html
+++ b/M1 C1.html
@@ -22,7 +22,7 @@
     </div> 
     <div class="gridThree"> 
         <p class="gridThree-text">The text I chose is Awesome</p> 
-        <img src="images\ice.jpg" width="500px" height="225px">
+        <img src="ice.jpg" width="500px" height="225px">
     </div>
     <div class="gridFour">
         <div class="green-box">
@@ -46,10 +46,10 @@
                 </div>
             <div class="gridFive-B">
                 <div class="latern-img">
-                    <img src="images\latern.jpg" width="200px" height="200px">
+                    <img src="latern.jpg" width="200px" height="200px">
                 </div>
                 <div class="Street-img">
-                    <img src="images\Street.jpg" width="200px" height="200px">
+                    <img src="Street.jpg" width="200px" height="200px">
                 </div>  
             </div>
         </div> 
